Fix dark mode for blog preview

--- a/assets/scss/common/_dark.scss
+++ b/assets/scss/common/_dark.scss
@@ -377,12 +377,16 @@ $navbar-dark-active-color:          $link-color-dark;
 }
 
 [data-dark-mode] body .card {
-  background: $body-bg-dark;
+  background: $body-overlay-dark;
   border: 1px solid $border-dark;
 }
 
 [data-dark-mode] body .card.bg-light {
   background: $body-overlay-dark !important;
+}
+
+[data-dark-mode] body .card article {
+  color: $body-color-dark;
 }
 
 [data-dark-mode] body .navbar .menu-icon .navicon {
